diffrent files and projects added

--- a/Positive_negative/Positive_Negative.ipynb
+++ b/Positive_negative/Positive_Negative.ipynb
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The plot makes almost no sense. The author has shoved together horror and science fiction elements without making developing connections between the two. The writing style is poor, with expressions like &#34;he peaked&#34; his eyebrow. The author needs to some time with a Strunk & White on word usage. A complete waste of time.\n",
+      "With the different wifey stories, the only one I enjoyed and really read was Lani's. Black was a real gangster that did real gangster s***! The other stories were boring and weak. I read a lot of urban books! This one was not a favorite of mine. Too much about cheating and shopping. I want to read real hood stories, not soap operas! I won't buy Number 7, and wish I could get a refund on 1-6.\n",
       "[[0. 0. 0. ... 0. 0. 0.]]\n"
      ]
     }
@@ -232,16 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I could not really get into this book... his wife left him without notice and he turns into a man whore. There is no depth in this book, it just talks about him banging women. It never got into the story. It looks as though he's going to buy a house where he was born but nothing more is to the story....really boring\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "\"30 percent what everyone's wearing, 35 percent whining and crying and 35 percent of what the hell is going on ? No real story, plot or hope of one. No point in trying to wade thru another one.\""
+       "array(['NEGATIVE'], dtype='<U8')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,8 +260,8 @@
     "\n",
     "clf_svm.fit(train_x_vectors, train_y)\n",
     "\n",
-    "test_x[0]\n",
-    "#clf_svm.predict(test_x_vectors[0])\n",
+    "print(test_x[0])\n",
+    "clf_svm.predict(test_x_vectors[0])\n",
     "\n",
     "\n"
    ]
@@ -275,7 +282,7 @@
     {
      "data": {
       "text/plain": [
-       "array(['POSITIVE'], dtype='<U8')"
+       "array(['NEGATIVE'], dtype='<U8')"
       ]
      },
      "execution_count": 8,
@@ -345,7 +352,7 @@
     {
      "data": {
       "text/plain": [
-       "array(['POSITIVE'], dtype='<U8')"
+       "array(['NEGATIVE'], dtype='<U8')"
       ]
      },
      "execution_count": 10,
@@ -380,7 +387,7 @@
      "output_type": "stream",
      "text": [
       "0.8076923076923077\n",
-      "0.6418269230769231\n",
+      "0.6466346153846154\n",
       "0.6610576923076923\n",
       "0.8052884615384616\n"
      ]
@@ -395,21 +402,38 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# F1 scores"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM [0.80582524 0.         0.80952381]\n"
+      "SVM [0.80582524 0.         0.80952381]\n",
+      "Decision Tree:  [0.6405868  0.         0.65248227]\n",
+      "Naive Bayes:  [0.65693431 0.         0.66508314]\n",
+      "Logistic Regression:  [0.80291971 0.         0.80760095]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/sobhione/Documents/JENSENS-SCHOOL/ML-Supervised-Learning/ML/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1609: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n",
+      "/Users/sobhione/Documents/JENSENS-SCHOOL/ML-Supervised-Learning/ML/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1609: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n",
+      "/Users/sobhione/Documents/JENSENS-SCHOOL/ML-Supervised-Learning/ML/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1609: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n",
       "/Users/sobhione/Documents/JENSENS-SCHOOL/ML-Supervised-Learning/ML/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1609: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, \"true nor predicted\", \"F-score is\", len(true_sum))\n"
      ]
@@ -422,70 +446,75 @@
     "\n",
     "print('SVM',f1_score(test_y, clf_svm.predict(test_x_vectors), average=None,\n",
     "         labels=[Sentiment.POSITIVE, Sentiment.NEUTRAL, Sentiment.NEGATIVE]))\n",
-    "#print('Decision Tree: ',f1_score(test_y, clf_dec.predict(test_x_vectors), average=None,\n",
-    "#         labels=[Sentiment.POSITIVE, Sentiment.NEUTRAL, Sentiment.NEGATIVE]))\n",
-    "#print('Naive Bayes: ',f1_score(test_y, clf_gnb.predict(test_x_vectors.toarray()), average=None,\n",
-    "#         labels=[Sentiment.POSITIVE, Sentiment.NEUTRAL, Sentiment.NEGATIVE]))\n",
-    "#print('Logistic Regression: ',f1_score(test_y, clf_log.predict(test_x_vectors), average=None,\n",
-    "#         labels=[Sentiment.POSITIVE, Sentiment.NEUTRAL, Sentiment.NEGATIVE]))\n"
+    "print('Decision Tree: ',f1_score(test_y, clf_dec.predict(test_x_vectors), average=None,\n",
+    "         labels=[Sentiment.POSITIVE, Sentiment.NEUTRAL, Sentiment.NEGATIVE]))\n",
+    "print('Naive Bayes: ',f1_score(test_y, clf_gnb.predict(test_x_vectors.toarray()), average=None,\n",
+    "         labels=[Sentiment.POSITIVE, Sentiment.NEUTRAL, Sentiment.NEGATIVE]))\n",
+    "print('Logistic Regression: ',f1_score(test_y, clf_log.predict(test_x_vectors), average=None,\n",
+    "         labels=[Sentiment.POSITIVE, Sentiment.NEUTRAL, Sentiment.NEGATIVE]))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Models Count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "436\n",
-      "436\n",
-      "0\n"
+      "Train =  \n",
+      "POSITIVE: 436\n",
+      "NEGATIVE: 436\n",
+      "NEUTRAL:  0\n",
+      "Test = \n",
+      "POSITIVE: 208\n",
+      "NEGATIVE: 208\n",
+      "NEUTRAL:  0\n"
      ]
     }
    ],
    "source": [
-    "print(train_y.count(Sentiment.POSITIVE))\n",
-    "print(train_y.count(Sentiment.NEGATIVE))\n",
-    "print(train_y.count(Sentiment.NEUTRAL))\n"
+    "print('Train =  ')\n",
+    "print('POSITIVE:',train_y.count(Sentiment.POSITIVE))\n",
+    "print('NEGATIVE:',train_y.count(Sentiment.NEGATIVE))\n",
+    "print('NEUTRAL: ',train_y.count(Sentiment.NEUTRAL))\n",
+    "\n",
+    "print('Test = ')\n",
+    "print('POSITIVE:',test_y.count(Sentiment.POSITIVE))\n",
+    "print('NEGATIVE:',test_y.count(Sentiment.NEGATIVE))\n",
+    "print('NEUTRAL: ',test_y.count(Sentiment.NEUTRAL))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Quantitative Analyses\n",
+    "The given code is performing text classification using two classifiers : Support Vector Machine (SVM) and Naive Bayes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "208\n",
-      "208\n",
-      "0\n"
+      "['POSITIVE' 'NEGATIVE' 'NEGATIVE']\n",
+      "['POSITIVE' 'NEGATIVE' 'NEGATIVE']\n"
      ]
-    }
-   ],
-   "source": [
-    "print(test_y.count(Sentiment.POSITIVE))\n",
-    "print(test_y.count(Sentiment.NEGATIVE))\n",
-    "print(test_y.count(Sentiment.NEUTRAL))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['POSITIVE', 'NEGATIVE', 'NEGATIVE'], dtype='<U8')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -493,8 +522,8 @@
     "test_set = ['I thoroughly enjoyed this, 5 stars', 'bad book do not buy', 'horrible waste of time']\n",
     "new_test = vectorizer.transform(test_set)\n",
     "\n",
-    "clf_svm.predict(new_test)\n",
-    "#clf_gnb.predict(new_test.toarray())"
+    "print(clf_svm.predict(new_test)) # SVM classifier\n",
+    "print(clf_gnb.predict(new_test.toarray())) # Naive Bayes classifier"
    ]
   },
   {
