--- a/seletion_ensemble.ipynb
+++ b/seletion_ensemble.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
      "text": [
       "KNeighborsClassifier accuracy:  0.8943333333333333\n",
       "GaussianNB accuracy:  0.8713333333333333\n",
-      "DecisionTreeClassifier accuracy:  0.8906666666666667\n",
+      "DecisionTreeClassifier accuracy:  0.8893333333333333\n",
       "LogisticRegression accuracy:  0.8943333333333333\n"
      ]
     },
@@ -239,15 +239,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cross-val-score: [0.92071429 0.92142857 0.90071429 0.91428571 0.91357143]\n",
-      "cross-val-score mean: 0.914\n"
+      "cross-val-score: [0.91857143 0.91928571 0.9        0.91142857 0.91285714]\n",
+      "cross-val-score mean: 0.912\n"
      ]
     }
    ],
